<resources>
    <string name="app_name">Time_Interval_App</string>

    <string name="title_section1">Introducing</string>
    <string name="title_section2">Device info</string>
    <string name="title_section3">Send data</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="add">Dodaj książkę</string>
    <string name="search">Search</string>
    <string name="about">O programie</string>
    <string name="title_section4">ERROR 404</string>
    <string name="ti">TI</string>
    <string name="frequency">FREQUENCY</string>
    <string name="period">Period</string>
    <string name="frequency2">Frequency</string>
    <string name="start">Start</string>
    <string name="inverted_polarization">Inverted polarization:</string>
    <string name="output_a">Output A</string>
    <string name="output_b">Output B</string>
    <string name="output_cw">Output CW</string>
    <string name="reset">Reset</string>
    <string name="open_device">Open device</string>
    <string name="connected_device">Connected device:</string>
    <string name="_75_mhz">75 MHz</string>
    <string name="_50_mhz">50 MHz</string>
    <string name="_25_mhz">25 MHz</string>
    <string name="_10_mhz">10 MHz</string>
    <string name="_10">10</string>
    <string name="_100">100</string>
    <string name="_10000">10000</string>
    <string name="_1000">1000</string>
    <string name="time_intervals">Time Interval:</string>
    <string name="output_width">Output width:</string>
    <string name="trigger">Trigger:</string>
    <string name="choose_mode">Choose mode:</string>
    <string name="periods">Periods:</string>
    <string name="frequency3">Frequency:</string>
    <string name="adf">ADF</string>
    <string name="trig_div">TRIG_DIV</string>


    <string-array name="ti_mode_array">
        <item>10 ns</item>
        <item>1 μs</item>
        <item>10 μs</item>
        <item>100 μs</item>
        <item>1 ms</item>
        <item>10 ms</item>
        <item>100 ms</item>
        <item>1 s</item>
    </string-array>

    <string-array name="ow_array">
        <item>10 ns</item>
        <item>20 ns</item>
        <item>50 ns</item>
        <item>100 ns</item>
    </string-array>

    <string-array name="frequency_array">
        <item>1 Hz</item>
        <item>100 Hz</item>
        <item>1 kHz</item>
    </string-array>

    <string-array name="period_array">
        <item>1 s</item>
        <item>10 ms</item>
        <item>1 ms</item>
    </string-array>

    <string-array name="frequency_mode_array">
        <item>10 MHz</item>
        <item>25 MHz</item>
        <item>50 MHz</item>
        <item>75 MHz</item>
    </string-array>

    <string-array name="freqency_period_array">
        <item>10</item>
        <item>100</item>
        <item>1000</item>
        <item>10000</item>
    </string-array>
</resources>
