<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_send_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <RelativeLayout
        android:id="@+id/mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/mode_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ti_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ti" />

            <RadioButton
                android:id="@+id/frequency_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/frequency" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/external_clock_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/mode_radio_group"
            android:text="External Clock" />


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/operation_mode_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mode_layout"
        android:layout_gravity="bottom" />

    <RelativeLayout
        android:id="@+id/checkbox_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_button">

        <TextView
            android:id="@+id/polarization_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/inverted_polarization" />

        <CheckBox
            android:id="@+id/signal_A_polarization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/polarization_title"
            android:layout_marginRight="10dp"
            android:text="@string/output_a" />

        <CheckBox
            android:id="@+id/signal_B_polarization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/polarization_title"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/signal_A_polarization"
            android:text="@string/output_b" />

        <CheckBox
            android:id="@+id/signal_CW_polarization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/polarization_title"
            android:layout_toRightOf="@id/signal_B_polarization"
            android:text="@string/output_cw" />
    </RelativeLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        android:padding="20dp"
        android:text="@string/reset" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/reset_button"
        android:padding="20dp"
        android:text="@string/start" />
</RelativeLayout>
